# PriceCooker_2.0

./: .coverage  README.md  config.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  setup.cfg  tox.ini
app/: db.py
app.egg-info/: SOURCES.txt  requires.txt
app/admin/: admin.py
app/app.egg-info/: PKG-INFO
app/auth/: auth.py
app/models/: models.py
app/scraping/: db_ops.py  scheduler.py  scraper.py
app/views/: home.py  items_operations.py  operations.py  userloader.py
static/: styles.css
templates/: base.html  enter.html  homepage.html  homepage2.html  save-item.html
tests/: conftest.py  test_admin.py  test_auth.py  test_scraper.py  test_user_model.py
