[metadata]
name = app
description = PriceCooker 2.0
author = pspsl
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    find:
install_requires =
    Flask~=3.0.0
    Flask-PyMongo
    pymongo~=4.6.0
    python-dotenv~=1.0.0
    requests~=2.31.0
    beautifulsoup4~=4.12.2
    PyJWT~=2.8.0
    Werkzeug~=3.0.1
    mongomock~=4.1.2
python_requires =
    >=3.6
zip_safe =
    no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
app = py.typed

[flake8]
max-line-length = 160